install Eigen and all header files in main project at SceneMesh3D.h

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 2.8)
 set(SOLUTIONTITLE HoleFilling CACHE TYPE STRING)
 project(${SOLUTIONTITLE})
+
+
 file(GLOB FILES_SRC
     "src/*.cpp"
     "src/*.h"
@@ -9,12 +11,13 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 /bigobj /EHa")
 set(VVRFRAMEWORK_DIR "" CACHE PATH "Location of VVR Framework")
 
 
-
 include_directories(${CMAKE_SOURCE_DIR})
 include_directories(${VVRFRAMEWORK_DIR}/include)
 include_directories(${VVRFRAMEWORK_DIR}/include/VVRScene)
 include_directories(${VVRFRAMEWORK_DIR}/include/GeoLib)
 include_directories(${VVRFRAMEWORK_DIR}/include/MathGeoLib)
+
+find_package (Eigen3 3.3 REQUIRED NO_MODULE)
 
 
 add_executable(${SOLUTIONTITLE} ${FILES_SRC})
@@ -23,8 +26,11 @@ ${SOLUTIONTITLE}
 ${VVRFRAMEWORK_DIR}/lib/VVRScene_d.lib 
 ${VVRFRAMEWORK_DIR}/lib/GeoLib_d.lib 
 ${VVRFRAMEWORK_DIR}/lib/MathGeoLib_d.lib
+Eigen3::Eigen
 )
 add_custom_command(TARGET ${SOLUTIONTITLE} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory "${VVRFRAMEWORK_DIR}/lib" ${CMAKE_BINARY_DIR}/$<CONFIG>)
+
+
 #add_custom_command(TARGET ${SOLUTIONTITLE} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory "${VVRFRAMEWORK_DIR}/GeoLib/$<CONFIG>" ${CMAKE_BINARY_DIR}/$<CONFIG>)
 #add_custom_command(TARGET ${SOLUTIONTITLE} POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory "${VVRFRAMEWORK_DIR}/MathGeoLib/$<CONFIG>" ${CMAKE_BINARY_DIR}/$<CONFIG>)
 
